Fix datepicker validation message overlap while adding/updating material

--- a/front-end/app/styles/dialogs/add-material.scss
+++ b/front-end/app/styles/dialogs/add-material.scss
@@ -78,3 +78,8 @@
 .datepicker-container .validation-messages{
   max-width: 180px;
 }
+
+.datepicker-error{
+  margin-top: 23px;
+  margin-left: 12px;
+}
